# Precognito

./: .gitignore  BRD.md  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  simplified_results.csv  simplified_results.json  simplified_summary.json  start_all.py  test_precognito.sqlite
backend/: cleanup_database.py  init_app_tables.sql  seed_inventory.sql  seed_users.py
backend/precognito/: api.py  auth.py  notifications.py
backend/precognito/anomaly/: INTEGRATION_PLAN.md  SYSTEM_INTEGRATION_GUIDE.md  USAGE.md  __init__.py  anomaly_model.pkl  api_simple.py  cleanup.py  core.py  debug_model.py  explore_data.py  feature_names.json  feature_stats.json  input_data.json  main_simple.py  requirements_api.txt  scaler.pkl  simplified_results.csv  simplified_results.json  simplified_summary.json  summary_report.json  test_fixed_api.py  test_ml_predictions.py  test_simplified.py  train_model.py
backend/precognito/financial/: FRONTEND_INTEGRATION.md  README.md  dataset.py  models.py  routes.py  services.py
backend/precognito/ingestion/: README.md  alerts.py  core.py  heartbeat.py  influx_client.py  mqtt_worker.py  preprocess.py  simulator.py
backend/precognito/inventory/: api.py  models.py
frontend/: .gitignore  init-db.ts  package.json  playwright.config.ts  playwright.global-setup.ts
frontend/public/: manifest.json
frontend/scripts/: create-session.ts  seed-test-user.ts
frontend/src/: proxy.ts
tests/unit/: test_auto_wo.py  test_dsp.py  test_financial.py  test_ingestion_service.py  test_inventory.py  test_notifications.py  test_rbac.py
(+89 files in other folders)
