[project]
name = "precognito"
version = "0.1.0"
description = "IoT-enabled Predictive Maintenance System"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # Data Processing
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    # Database
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.30.0",
    "influxdb-client>=1.40.0",
    # IoT/MQTT
    "paho-mqtt>=2.1.0",
    # ML/AI
    "scikit-learn>=1.6.0",
    # Utils
    "pydantic>=2.10.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.28.0",
    "pytest>=9.0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "ruff>=0.9.0",
    "mypy>=1.14.0",
]
